- Improve contact box to prevent auto message. - add data for search engine - update map                 a. remove the map from home page                 b. change the display method (e.g. get JCM account for google API, use image, so on) - add link to images

--- a/JCashMachineThailand/Views/Details/Career.cshtml
+++ b/JCashMachineThailand/Views/Details/Career.cshtml
@@ -63,7 +63,7 @@
     <hr />
     <h2 class="card-subtitle text-dark mt-2 mb-2">The TEAM</h2>
     <h5 class="card-text text-black-50 mb-3">
-        Right here are the team who create software to driver the Banknotes Acceptor for world wide currency.
+        Right here are the team who create software to drive the Banknotes Acceptor for world wide currency.
     </h5>
     <div class="container">
         <div class="row">
