--- a/JCashMachineThailand/Views/Details/Products.cshtml
+++ b/JCashMachineThailand/Views/Details/Products.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IList<JCashMachineThailand.Models.Product>
 @{
-    ViewBag.Title = "Products";
+    ViewBag.Title = "Banknotes Acceptor";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
