--- a/JCashMachineThailand/Views/Shared/_Layout.cshtml
+++ b/JCashMachineThailand/Views/Shared/_Layout.cshtml
@@ -3,13 +3,25 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="keywords" content="เจ-แคช แมชชีน (ประเทศไทย) จำกัด, J-Cash Machine (Thailand).CO.,LTD., JCM Thailand, 
+          Bill Validator, Bill Acceptor, Banknotes Acceptor, Cash Machine, Kiosk, Vending, Cash, Payment, Retail, ATM,
+          จำหน่ายเครื่องรับธนับัตรในไทย, เครื่องรับเงิน, เครื่องนับเงิน, เครื่องรับตัง, รับเงินอัตโนมัติ, ที่ใส่แบงค์, ตู้รับเงินสด, ตู้อัตโนมัติ, ตู้เติมเงิน" />
+    <meta property="description" content="A Global quality of Banknotes Acceptor (เครื่องรับธนบัตร, Bill Validator) for Kiosk, Vending Machine and automatic payment. 
+          We provide software support for product of Japan Cash Machine (JCM) under the brand 'JCM' bill validator.
+          We develop the Banknotes Acceptor software for world wide currency" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="JCM-Thailand | J-Cash Machine (Thailand) Co.,Ltd." />
+    <meta property="og:url" content="https://jcm-thai.co.th" />
+    <meta property="og:site_name" content="JCM-Thai.co.th" />
+    <meta property="og:image" content="https://jcm-thai.co.th/Images/JCM_Global_RGB%20-%20email%20signature.png" />
+              
     <title>@ViewBag.Title | JCM Thailand</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="shortcut icon" href="~/Images/JCM-Global-logo.ico" />
     <link rel="stylesheet" type="text/css" href="~/Content/custom.layout.css" />
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-
 
 </head>
 <body>
